gccida/c0/df_bb_du_chain_create
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_du_chain_create/src/df.c:1906:4: error: expected ';' after expression
rtx insn; // [rsp+48h] [rbp-28h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_du_chain_create/src/df.c:1906:5: error: use of undeclared identifier 'insn'
rtx insn; // [rsp+48h] [rbp-28h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_du_chain_create/src/df.c:1909:7: error: use of undeclared identifier 'insn'
for ( insn = bb->end; ; insn = ( rtx)insn[1] ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_du_chain_create/src/df.c:1909:25: error: use of undeclared identifier 'insn'
for ( insn = bb->end; ; insn = ( rtx)insn[1] ) 
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_du_chain_create/src/df.c:1909:38: error: expected ')'
for ( insn = bb->end; ; insn = ( rtx)insn[1] ) 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_du_chain_create/src/df.c:1909:5: note: to match this '('
for ( insn = bb->end; ; insn = ( rtx)insn[1] ) 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_du_chain_create/src/df.c:1912:6: error: use of undeclared identifier 'insn'
if ( insn ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_du_chain_create/src/df.c:1913:6: error: use of undeclared identifier 'insn'
v4 = insn != ( rtx)bb->head[1]; 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_du_chain_create/src/df.c:1916:7: error: use of undeclared identifier 'insn'
uid = insn->fld[0].rtuint; 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_du_chain_create/src/df.c:1917:47: error: use of undeclared identifier 'insn'
if ( rtx_class[( unsigned __int16)*( _DWORD *)insn] == 105 ) 
                                              ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_du_chain_create/src/obj/df.o] Error 1
